third_party/WebKit/Source/WebCore/dom/StyleElement.cpp
@@ -31,6 +31,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
+static bool isValidStyleChild(Node* node)
+{
+    ASSERT(node);
+    Node::NodeType nodeType = node->nodeType();
+    return nodeType == Node::TEXT_NODE || nodeType == Node::CDATA_SECTION_NODE;
+}
+    
 StyleElement::StyleElement(Document* document, bool createdByParser)
     : m_createdByParser(createdByParser)
     , m_loading(false)
@@ -95,8 +102,7 @@ void StyleElement::process(Element* e)
 
     unsigned resultLength = 0;
     for (Node* c = e->firstChild(); c; c = c->nextSibling()) {
-        Node::NodeType nodeType = c->nodeType();
-        if (nodeType == Node::TEXT_NODE || nodeType == Node::CDATA_SECTION_NODE || nodeType == Node::COMMENT_NODE)
+        if (isValidStyleChild(c))
             resultLength += c->nodeValue().length();
     }
     UChar* text;
@@ -104,8 +110,7 @@ void StyleElement::process(Element* e)
 
     UChar* p = text;
     for (Node* c = e->firstChild(); c; c = c->nextSibling()) {
-        Node::NodeType nodeType = c->nodeType();
-        if (nodeType == Node::TEXT_NODE || nodeType == Node::CDATA_SECTION_NODE || nodeType == Node::COMMENT_NODE) {
+        if (isValidStyleChild(c)) {
             String nodeValue = c->nodeValue();
             unsigned nodeLength = nodeValue.length();
             memcpy(p, nodeValue.characters(), nodeLength * sizeof(UChar));
